--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@
   --background-button-cover: rgba(255, 255, 255, 0.05);
   --social-link-hover: #ffffff33;
   --switch-bg-url: url(./moon-stars.svg);
+  --highlight-color: #ffffff33;
 }
 
 .light {
@@ -28,6 +29,7 @@
 
 body {
   background: var(--bg-url) no-repeat center/cover;
+  height: 100vh;
 }
 
 body * {
@@ -36,7 +38,8 @@ body * {
 }
 
 #container {
-  width: 360px;
+  width: 100%;
+  max-width: 400px;
   margin: 56px auto 0px;
   padding: 0 24px;
 }
@@ -76,6 +79,7 @@ body * {
   top: 50%;
   z-index: 1;
   transform: translateY(-50%);
+  animation: slide-back 0.2s;
 }
 
 #switch span {
@@ -89,8 +93,11 @@ body * {
 }
 
 .light #switch button {
-  right: 0;
-  left: initial;
+  animation: slide-in 0.2s forwards;
+}
+
+#switch button :hover {
+  outline: 8px solid var(--highlight-color);
 }
 
 /* Links */
@@ -157,4 +164,33 @@ footer {
   text-align: center;
   padding: 24px 0;
   font-size: 14px;
+}
+
+/* Aqui mudei para que quando for um monitor grande (acima de 700px) mude a imagem para outra */
+@media (min-width: 700px) {
+  :root {
+    --bg-url: url(./Imagens/bg-desktop.jpg);
+  }
+  .light {
+    --bg-url: url(./Imagens/bg-desktop-light.jpg);
+  }
+}
+
+/* animations */
+@keyframes slide-in {
+  from {
+    left: 0;
+  }
+  to {
+    left: 50%;
+  }
+}
+
+@keyframes slide-back {
+  from {
+    left: 50%;
+  }
+  to {
+    left: 0;
+  }
 }
